Fix typo in website

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Powerful</h2>
-                    <p class="lead">Gerbera automatically extracts metadata from you music files. When combined with the power of JavaScript, you can create the layout of the collection as you want it, on all devices.</p>
+                    <p class="lead">Gerbera automatically extracts metadata from your music files. When combined with the power of JavaScript, you can create the layout of the collection as you want it, on all devices.</p>
                     <p class="lead">Dont want to customise? We provide a great experience by default.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
