--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">MediaTomb</h2>
-                    <p class="lead">Gerbera is proudly built upon <a href="http://mediatomb.cc">MediaTomb 0.12.1</a> continuing that projects great legacy.</p>
+                    <p class="lead">Gerbera is proudly built upon <a href="http://mediatomb.cc">MediaTomb 0.12.1</a> continuing that project's great legacy.</p>
                     <p class="lead">What has <a href="https://github.com/gerbera/gerbera#differences-to-mediatomb-so-far">changed</a>?</p>
                 </div>
                 <div class="col-lg-5 col-lg-push-2 col-sm-6">
